tooling/nargo_cli/tests/snapshots/execution_success/brillig_calls/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32) {
    // Safety: comment added by `nargo expand`
    unsafe {
        assert(entry_point(x) == 2_u32);
        swap_entry_point(x, x + 1_u32);
        assert(deep_entry_point(x) == 4_u32);
        multiple_values_entry_point(x);
    }
}

unconstrained fn returns_multiple_values(x: u32) -> (u32, u32, u32, u32) {
    (x + 1_u32, x + 2_u32, x + 3_u32, x + 4_u32)
}

unconstrained fn multiple_values_entry_point(x: u32) {
    let (a, b, c, d): (u32, u32, u32, u32) = returns_multiple_values(x);
    assert(a == (x + 1_u32));
    assert(b == (x + 2_u32));
    assert(c == (x + 3_u32));
    assert(d == (x + 4_u32));
}

unconstrained fn inner(x: u32) -> u32 {
    x + 1_u32
}

unconstrained fn entry_point(x: u32) -> u32 {
    inner(x + 1_u32)
}

unconstrained fn swap(x: u32, y: u32) -> (u32, u32) {
    (y, x)
}

unconstrained fn swap_entry_point(x: u32, y: u32) {
    let swapped: (u32, u32) = swap(x, y);
    assert(swapped.0 == y);
    assert(swapped.1 == x);
    let swapped_twice: (u32, u32) = swap(swapped.0, swapped.1);
    assert(swapped_twice.0 == x);
    assert(swapped_twice.1 == y);
}

unconstrained fn level_3(x: u32) -> u32 {
    x + 1_u32
}

unconstrained fn level_2(x: u32) -> u32 {
    level_3(x + 1_u32)
}

unconstrained fn level_1(x: u32) -> u32 {
    level_2(x + 1_u32)
}

unconstrained fn deep_entry_point(x: u32) -> u32 {
    level_1(x + 1_u32)
}
